--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://d252ec78-b822-4d8c-8f41-7d680da9c377.preview.emergentagent.com
 WDS_SOCKET_PORT=443
